--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^16.12.0",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-toastify": "^6.0.5"
   },
   "devDependencies": {
     "prettier": "2.0.5"
