--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-toastify": "^6.0.5"
+    "react-responsive-modal": "^5.0.2",
+    "sweetalert2": "^9.14.0",
+    "sweetalert2-react-content": "^3.0.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
